# getting_started_duckdb

./: 00_initial.ipynb  pyproject.toml  script.py
data/: db_ds_salaries.db
