[tool.poetry]
name = "dev-duckdb"
version = "0.1.0"
description = ""
authors = ["sidneisantiago <sidnei.gs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "0.9.2"
polars = "^0.20.5"
pyarrow = "^15.0.0"
pandas = "^2.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
